--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,35 @@
-<h1>
-  {{title}}
-</h1>
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">Bowling Tracker</a>
+    </div>
+    <ul class="nav navbar-nav">
+      <li class="new-game-button"><a href="#"><span class="glyphicon glyphicon-plus"></span> New Game</a></li>
+      <li class="dropdown">
+        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Previous Games
+        <span class="caret"></span></a>
+        <ul class="dropdown-menu">
+          <li><a href="#">Game 1</a></li>
+          <li><a href="#">Friday night</a></li>
+          <li><a href="#">Dimitry's Birthday</a></li> 
+        </ul>
+      </li>
+    </ul>
+  </div>
+</nav>
+
+<div class="container">
+    <header class="jumbotron text-center">
+        <h1><img class="bowling-ball-image"src="assets/images/bowling-ball-icon.png" alt="bowling ball"> Bowling Tracker</h1>
+        <p>Track your bowling games and save them. View your past games to review and improve.</p>
+    </header>
+    <div class="row">
+        <div class="col-md-4 col-xs-4"></div>
+        <div class="btn-group-vertical col-md-4 col-xs-4">
+            <a href="#" class="btn btn-warning btn-lg" role="button"><span class="glyphicon glyphicon-plus"></span> New Game</a>
+            <br>
+            <a href="#" class="btn btn-primary btn-lg" role="button">Previous Games</a>
+        </div>
+        <div class="col-md-4 col-xs-4"></div>
+    </div>
+</div>
