--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -8,7 +8,7 @@
         <div class="btn-group-vertical col-md-4 col-xs-4">
             <a href="#" class="btn btn-warning btn-lg" role="button"><span class="glyphicon glyphicon-plus"></span> New Game</a>
             <br>
-            <a href="#" class="btn btn-primary btn-lg" role="button">Previous Games</a>
+            <a routerLink="/list-games" class="btn btn-primary btn-lg" role="button">Previous Games</a>
         </div>
         <div class="col-md-4 col-xs-4"></div>
     </div>
