--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -6,7 +6,7 @@
     <div class="row">
         <div class="col-md-4 col-xs-4"></div>
         <div class="btn-group-vertical col-md-4 col-xs-4">
-            <a href="#" class="btn btn-warning btn-lg" role="button"><span class="glyphicon glyphicon-plus"></span> New Game</a>
+            <a routerLink="/new-game" class="btn btn-warning btn-lg" role="button"><span class="glyphicon glyphicon-plus"></span> New Game</a>
             <br>
             <a routerLink="/list-games" class="btn btn-primary btn-lg" role="button">Previous Games</a>
         </div>
