--- a/src/app/new-game/new-game.component.css
+++ b/src/app/new-game/new-game.component.css
@@ -14,3 +14,10 @@ h1 {
     background-color: transparent;
     text-align: center;
 }
+
+.add-new-player {
+    text-align: center;
+    width: 100%;
+    background-color: transparent;
+    color: black;
+}
