--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
     <ul class="nav navbar-nav">
       <li class="new-game-button"><a href="new-game"><span class="glyphicon glyphicon-plus"></span> New Game</a></li>
       <li class="dropdown">
-        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Previous Games
+        <a class="dropdown-toggle" data-toggle="dropdown" routerLink="/list-games">Previous Games
         <span class="caret"></span></a>
         <ul class="dropdown-menu">
           <li *ngFor="let game of games"><a (click)="onSelect(game)">{{game.title}}</a></li>
