adding players to new game form works as well as redirecting to the newly added game

--- a/src/app/new-game/new-game.component.css
+++ b/src/app/new-game/new-game.component.css
@@ -21,3 +21,12 @@ h1 {
     background-color: transparent;
     color: black;
 }
+
+.player-name-input {
+    float: left;
+    width: 88%;
+}
+
+.delete-player-button {
+    width: 12%;
+}
