--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
       <a class="navbar-brand" routerLink="/homepage">Bowling Tracker</a>
     </div>
     <ul class="nav navbar-nav">
-      <li class="new-game-button"><a href="new-game"><span class="glyphicon glyphicon-plus"></span> New Game</a></li>
+      <li class="new-game-button"><a routerLink="/new-game"><span class="glyphicon glyphicon-plus"></span> New Game</a></li>
       <li class="dropdown">
         <a class="dropdown-toggle" data-toggle="dropdown" routerLink="/list-games">Previous Games
         <span class="caret"></span></a>
