reduced column width for name

--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -7,7 +7,7 @@
       <table class="table table-hover">
         <thead>
           <tr>
-            <th>Player</th>
+            <th class="player-column">Player</th>
             <th colspan="99">Score Card</th>
           </tr>
         </thead>
