added pins down html

--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -20,6 +20,15 @@
           </tr>
         </tbody>
       </table>
+
+      <h2>Caleb's Turn</h2>
+      <div class="form-inline">
+        <div class="form-group">
+          <label>Pins Down</label>
+          <input class="form-control pin-down-input" type="number">
+          <button class="btn btn-success">Add</button>
+        </div>
+      </div>
     </div>
   </div>
   <div class="col-sm-2"></div>
