changed how pinsdown looks

--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -22,13 +22,10 @@
       </table>
 
       <h2>Caleb's Turn</h2>
-      <div class="form-inline">
         <div class="form-group">
-          <label>Pins Down</label>
-          <input class="form-control pin-down-input" type="number">
-          <button class="btn btn-success">Add</button>
+          <h3>Select Pins Down</h3>
+          <button *ngFor="let pinsDown of possiblePins;" class="btn btn-success">{{pinsDown}}</button>
         </div>
-      </div>
     </div>
   </div>
   <div class="col-sm-2"></div>
