game can now be finished

--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -51,12 +51,13 @@
           </tr>
         </tbody>
       </table>
-
-      <h2>{{currentPlayer}}'s Turn <br>Bowl: {{currentBowl}}</h2>
+      <div *ngIf="!game.isFinished">
+        <h2>{{currentPlayer}}'s Turn <br>Bowl: {{currentBowl}}</h2>
         <div class="form-group">
           <h3>Select Pins Down</h3>
           <button *ngFor="let pinsDown of possiblePins;" class="btn btn-success" (click)="pinsDownClicked(pinsDown)">{{pinsDown}}</button>
         </div>
+      </div>
     </div>
   </div>
   <div class="col-sm-2"></div>
