--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -3,6 +3,7 @@
   <div class="col-sm-8">
     <div *ngIf="game">
       <h1>{{game.title}}</h1>
+      <h2>{{game.location}}</h2>
 
       <table class="table table-hover">
         <thead>
